--- a/views/games-group.hbs
+++ b/views/games-group.hbs
@@ -265,7 +265,7 @@ font-size: .8rem;
     <tr id="gamerow_{{id}}" >
       <td>{{groupId}}</td>
       <td>{{id}}</td>  
-      <td>{{name}}</td>
+      <td>{{nameOfGame}}</td>
       <td><textarea name="a" id="a" cols="30" rows="10">{{description}}</textarea></td>
       <td>{{url}}</td>
       <td><img class"giant-pic" src="{{image_url}}"></td>
