--- a/views/gamesOfGroup.hbs
+++ b/views/gamesOfGroup.hbs
@@ -1,7 +1,7 @@
 <ul>
     <li>Group Identifier : {{gamesOfGroup.groupId}}</li>
     <li>Identifier : {{gamesOfGroup.id}}</li>
-    <li>Name : {{gamesOfGroup.name}}</li>
+    <li>Name : {{gamesOfGroup.nameOfGame}}</li>
     <li>Description : {{gamesOfGroup.description}}</li>
     <li>Url : {{gamesOfGroup.url}}</li>
     <li>Image_url : {{gamesOfGroup.image_url}}</li>
