--- a/views/groups-list.hbs
+++ b/views/groups-list.hbs
@@ -1,3 +1,297 @@
+<style>
+  @import url('https://fonts.googleapis.com/css?family=Raleway:300,400');
+@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
+*{
+    font-family: Raleway;
+    color: #777;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+html, body{
+    margin: 0;
+    padding: 0;
+}
+
+.nav ul{
+    margin: 0;
+}
+
+.nav li{
+    display: inline;
+}
+
+.nav a{
+    display: inline-block;
+    padding: .5em;
+    color: white;
+    text-decoration: none;
+}
+
+.main-nav #back{
+    text-align: center;
+    font-size: 1.1em;
+    font-weight: lighter;
+    border-bottom: 1px solid rgba(255,255,255,.3);
+}
+
+.nav a:hover{
+    background-color: rgba(255,255,255,.3);
+}
+
+header{
+    background-color: steelblue;
+    background-image: url("../imgs/isel_logo.jpg");
+    background-blend-mode: multiply;
+    background-size: cover;
+    padding-bottom: 30px;
+}
+
+.band-name{
+    text-align: center;
+    margin: 0;
+    font-size: 3em;
+    font-weight: normal;
+    color: white;
+}
+
+.content-section{
+    margin: 1em;
+}
+
+.container{
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 1.5em;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.loginbox{
+    width: 340px;
+    height: 500px;
+    background: slategrey;
+    color: #fff;
+    top: 60%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+
+.avatar{
+    width: 120px;
+    height: 100px;
+    border-radius: 100%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 60px);
+}
+
+.titlelogin{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+    color: white;
+}
+
+.loginbox p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.loginbox input[type ="text"], input[type="password"]{
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+
+
+.loginbox input[type ="submit"]:hover{
+    cursor: pointer;
+    background: steelblue;
+    color: #000;
+}
+
+.loginbox a{
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: darkgrey;
+}
+
+.loginbox a:hover{
+    color: #ffc107;
+}
+
+.miniheaders{
+    color: white;
+}
+
+
+.section-header{
+    font-family: DejaVu Sans Mono, monospace;
+    font-weight: normal;
+    color: #333;
+    margin: 0 auto;
+    font-size: 2.5em;
+}
+
+table, th, td {
+    margin-left: 0;
+    margin-bottom: 0;
+    border: 1px solid black;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h1,h3,h4 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+th {
+    color: white;
+    background-color: steelblue;
+}
+
+td{
+    background-color: AliceBlue;
+    color: black;
+    text-align: center;
+}
+
+li {
+    list-style-type: none;
+}
+
+footer{
+
+    background-color: rgb(0, 0, 0, .6);
+    padding-top: 30px;
+    
+    color: white;
+    padding: .25em 0;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height:5rem;      
+
+}
+
+.another-content-section{
+    width: 30%;
+    max-width: 900px;
+    max-height: 900px;
+}
+
+.another-content-section h3{
+    text-align: center;
+}
+
+.big-content-section{
+    width: 43%;
+    max-width: 900px;
+    max-height: 900px
+}
+
+img{
+    max-width: 100%;
+  height: auto;
+}
+
+textarea{
+    background-color: AliceBlue;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 10px;
+}
+
+caption {
+    padding: 10px;
+    caption-side: bottom;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-family: sans-serif;
+    font-size: .8rem;
+}
+
+.notfound{
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(45deg,#8500ff,#5acaff);
+    height: 100vh;
+}
+
+#container{
+    position: absolute;
+    top: 30%;
+    left: 10%;
+    right: 10%;
+    bottom: 10%;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 15px 30px rgba(0,0,0,.5);
+}
+
+#container .content h2{
+    font-size: 2vw ;
+    color: #fff;
+    line-height: 1em;
+}
+
+#container .content h4{
+    position: relative;
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    color: #111;
+    font-weight: 300;
+    padding: 10px 20px;
+    display: inline-block;
+}
+
+#container .content p{
+    color: #fff;
+    font-size: 1.2em;
+}
+
+#container .content a{
+    position: relative;
+    display: inline-block;
+    padding: 10px 25px;
+    background: #ff0562;
+    color: #fff;
+    text-decoration: none;
+    margin-top: 25px;
+    border-radius: 25px;
+    border-bottom: 4px sp;
+}
+</style>
+
 <section class="content-section container">    
     <form method="Post" action="/group">  
               <h1>Adicionar Grupo:</h1>
@@ -17,17 +311,28 @@
         <th>Identifier</th>
         <th>Name</th>
         <th>Description</th>
-        <th></th>
-        <th></th>
       </tr>
       {{#each groups}}
         <tr id="grouprow_{{id}}" >
           <td><a href="/games/{{id}}" name="groupID">{{id}}</a></td>
           <td>{{nameOfGroup}}</td>
           <td>{{description}}</td>
-          <td><a href="group/update/{{id}}/{{nameOfGroup}}">Update Group</a></td>
-          <td><button id="btn_group_{{id}}"> Delete Group</button></td>
         </tr>
+
+        <section class="content-section container">    
+    <form method="Get" action="/group/delete/{{id}}"> 
+                <input type="submit" value="Delete Group {{id}}" ID="GTable"/>
+    </form>
+</section> 
+  <br>
+
+  <section class="content-section container">    
+    <form method="Get" action="/group/update/{{id}}/{{nameOfGroup}}"> 
+                <input type="submit" value="Change Group {{id}}" ID="GTable"/>
+    </form>
+</section> 
+  <br>
+
       {{/each}}
   </table>
 </section>
